Compartmentalisation section added

--- a/scrapbook.html
+++ b/scrapbook.html
@@ -16,11 +16,14 @@
         <h6>I am an h6</h6>
     </div>
     <div>
-        <h1>Displaying text</h1>
+        <h1>DISPLAYING TEXT</h1>
         <p>I am a paragraph <span>and I am a span inside a paragraph </span>I am the usual paragraph again</p>
         <q>I am a quote</q>
         <p>I am a new line <br><br></p>
         
+    </div>
+    <div>
+        <h1>COMPARTMENTALISATION</h1>
     </div>
 </body>
 </html>
