--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <h1>HEADINGS</h1>
-        <h1>I am an h1</h1>
+        <h1>&lth1&lgI am an h1&lt/h1&lg</h1>
         <h2>I am an h2</h2>
         <h3>I am an h3</h3>
         <h4>I am an h4</h4>
@@ -17,14 +17,15 @@
     </div>
     <div>
         <h1>DISPLAYING TEXT</h1>
-        <p>I am a paragraph <span>and I am a span inside a paragraph </span>I am the usual paragraph again</p>
+        <p>&ltp&gtI am a paragraph &lt/p&gt<span>and I am a span inside a paragraph </span>I am the usual paragraph again</p>
         <q>I am a quote</q>
         <p>I am a new line <br><br></p>
         
     </div>
     <div>
         <h1>COMPARTMENTALISATION</h1>
-        <div>&ltdiv&gt</div>
+        <div>&ltdiv&gt lt/div&gt</div>
+        <span>&ltspan&gt &lt/span&gt</span>
 
     </div>
 </body>
