--- a/index.html
+++ b/index.html
@@ -8,25 +8,39 @@
 <body>
     <div>
         <h1>HEADINGS</h1>
-        <h1>&lth1&lgI am an h1&lt/h1&lg</h1>
-        <h2>I am an h2</h2>
-        <h3>I am an h3</h3>
-        <h4>I am an h4</h4>
-        <h5>I am an h5</h5>
-        <h6>I am an h6</h6>
-    </div>
+        <h1>&lt;h1&gt;I am an h1&lt;/h1&gt;/h1>
+        <h2>&lt;h2&gt;I am an h2&lt;/h2&gt;/h2>
+        <h3>&lt;h3&gt;I am an h3&lt;/h3&gt;/h3>
+        <h4>&lt;h4&gt;I am an h4&lt;/h4&gt;/h4>
+        <h5>&lt;h5&gt;I am an h5&lt;/h5&gt;/h5>
+        <h6>&lt;h6&gt;I am an h6&lt;/h6&gt;/h6>
+   </div>
+
     <div>
         <h1>DISPLAYING TEXT</h1>
-        <p>&ltp&gtI am a paragraph &lt/p&gt<span>and I am a span inside a paragraph </span>I am the usual paragraph again</p>
-        <q>I am a quote</q>
-        <p>I am a new line <br><br></p>
-        
+        <p>&lt;p&gt; I am a paragraph &lt;/p&gt;<span>&lt;and I am a span inside a line &lt;/span&gt; </span>&lt;p&gt;I am the usual paragraph again&lt;/p&gt;</p>
+        <q>&Lt;q&gt;I am a quote&lt;/q&gt;</q>
+        <p><br><br>&lt;br&gt;&lt;br&gt;I am a new line </p>
     </div>
+
     <div>
         <h1>COMPARTMENTALISATION</h1>
-        <div>&ltdiv&gt lt/div&gt</div>
-        <span>&ltspan&gt &lt/span&gt</span>
-
+        <div>&lt;div&gt; I am a container that divides the page into sections &lt;/div&gt;</div>
+        <span>&lt;span&gt;I am a span inside a line&lt;/span&gt;</span>
     </div>
+    <div><h1>Lists</h1>
+    <p>I am an unordered list
+        &lt;ul&gt;
+            &lt;li&gt;item1&lt;/li&gt;
+            &lt;li&gt;item2&lt;/li&gt;
+        &lt;/ul&gt;
+        <ul>
+            <li>item1</li>
+            <li>item2</li>
+        </ul>
+    </p>
+    </div>
+
+
 </body>
 </html>
