--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <div>
         <h1>HEADINGS</h1>
         <h1>&lt;h1&gt;I am an h1&lt;/h1&gt;/h1>
-        <h2>&lt;h2&gt;I am an h2&lt;/h2&gt;/h2>
-        <h3>&lt;h3&gt;I am an h3&lt;/h3&gt;/h3>
-        <h4>&lt;h4&gt;I am an h4&lt;/h4&gt;/h4>
-        <h5>&lt;h5&gt;I am an h5&lt;/h5&gt;/h5>
-        <h6>&lt;h6&gt;I am an h6&lt;/h6&gt;/h6>
+        <h2>&lt;h2&gt;I am an h2&lt;/h2&gt;</h2>
+        <h3>&lt;h3&gt;I am an h3&lt;/h3&gt;</h3>
+        <h4>&lt;h4&gt;I am an h4&lt;/h4&gt;</h4>
+        <h5>&lt;h5&gt;I am an h5&lt;/h5&gt;</h5>
+        <h6>&lt;h6&gt;I am an h6&lt;/h6&gt;</h6>
    </div>
 
     <div>
         <h1>DISPLAYING TEXT</h1>
-        <p>&lt;p&gt; I am a paragraph &lt;/p&gt;<span>&lt;and I am a span inside a line &lt;/span&gt; </span>&lt;p&gt;I am the usual paragraph again&lt;/p&gt;</p>
-        <q>&Lt;q&gt;I am a quote&lt;/q&gt;</q>
+        <p>&lt;p&gt; I am a paragraph &lt;/p&gt;<span>&lt;span&gt;and I am a span inside a line &lt;/span&gt; </span>&lt;p&gt;I am the usual paragraph again&lt;/p&gt;</p>
+        <q>&lt;q&gt;I am a quote&lt;/q&gt;</q>
         <p><br><br>&lt;br&gt;&lt;br&gt;I am a new line </p>
     </div>
 
@@ -30,10 +30,10 @@
     </div>
     <div><h1>Lists</h1>
     <p>I am an unordered list
-        &lt;ul&gt;
-            &lt;li&gt;item1&lt;/li&gt;
-            &lt;li&gt;item2&lt;/li&gt;
-        &lt;/ul&gt;
+        &lt;ul&gt;<br>
+            &lt;li&gt;item1&lt;/li&gt;<br>
+            &lt;li&gt;item2&lt;/li&gt;<br>
+        &lt;/ul&gt;<br>
         <ul>
             <li>item1</li>
             <li>item2</li>
