--- a/index.html
+++ b/index.html
@@ -29,16 +29,26 @@
         <span>&lt;span&gt;I am a span inside a line&lt;/span&gt;</span>
     </div>
     <div><h1>Lists</h1>
-    <p>I am an unordered list
+    <p>I am an unordered list<br>
         &lt;ul&gt;<br>
             &lt;li&gt;item1&lt;/li&gt;<br>
             &lt;li&gt;item2&lt;/li&gt;<br>
         &lt;/ul&gt;<br>
+    </p>
         <ul>
             <li>item1</li>
             <li>item2</li>
         </ul>
+    <p>I am an ordered list<br>
+        &lt;ol&gt;<br>
+            &lt;li&gt;item1&lt;/li&gt;<br>
+            &lt;li&gt;item2&lt;/li&gt;<br>
+        &lt;/ol&gt;<br>
     </p>
+        <ol>
+            <li>item1</li>
+            <li>item2</li>
+        </ol>
     </div>
 
 
