--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
         </ol>
     </div>
 
+    <div>
+        <h1>IMAGES</h1>
+        <img src="Lyme_Hall.jpg" alt="Lyme Hall"
+        <p>&lt;img src="cat.png" alt="Surprised Cat" /&gt;
+
+            Note src - (mandatory) the location of the image relative to location of the HTML file, unless a full (absolute) URL (a.k.a http://) is given.
+            
+            Note alt - (optional) what appears in the tooltip when you hover over the image. Good for accessibility. Best practice.
+            
+            Note: Images are self-closing</p>
+    </div>
 
 </body>
 </html>
