--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <h1>HEADINGS</h1>
-        <h1>&lt;h1&gt;I am an h1&lt;/h1&gt;/h1>
+        <h1>&lt;h1&gt;I am an h1&lt;/h1&gt;</h1>
         <h2>&lt;h2&gt;I am an h2&lt;/h2&gt;</h2>
         <h3>&lt;h3&gt;I am an h3&lt;/h3&gt;</h3>
         <h4>&lt;h4&gt;I am an h4&lt;/h4&gt;</h4>
@@ -53,7 +53,7 @@
 
     <div>
         <h1>IMAGES</h1>
-        <img src="Lyme_Hall.jpg" alt="Lyme Hall"
+        <img src="Lyme_Hall.jpg" alt="Lyme Hall">
         <p>&lt;img src="cat.png" alt="Surprised Cat" /&gt;
 
             Note src - (mandatory) the location of the image relative to location of the HTML file, unless a full (absolute) URL (a.k.a http://) is given.
