--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>HTML scrapbook</title>
 </head>
 <body>
+    <p id="Home"></p>
     <div>
         <h1>HEADINGS</h1>
         <h1>&lt;h1&gt;I am an h1&lt;/h1&gt;</h1>
@@ -53,15 +54,22 @@
 
     <div>
         <h1>IMAGES</h1>
-        <img src="Lyme_Hall.jpg" alt="Lyme Hall">
-        <p>&lt;img src="cat.png" alt="Surprised Cat" /&gt;
+        <img src="Lyme_Hall.JPG" alt="Lyme Hall"><br>
+        <p>&lt;img src="cat.png" alt="Surprised Cat" /&gt;<br>
 
-            Note src - (mandatory) the location of the image relative to location of the HTML file, unless a full (absolute) URL (a.k.a http://) is given.
+            Note src - (mandatory) the location of the image relative to location of the HTML file, unless a full (absolute) URL (a.k.a http://) is given.<br>
             
-            Note alt - (optional) what appears in the tooltip when you hover over the image. Good for accessibility. Best practice.
+            Note alt - (optional) what appears in the tooltip when you hover over the image. Good for accessibility. Best practice.<br>
             
             Note: Images are self-closing</p>
     </div>
 
+    <div>
+        <h1>Links (or anchors)</h1>
+        <a href="index.html">Home</a>
+        <p>&lt;a href=”index.html”&gt;Home&lt;/a&gt;<br>
+            Note href - (mandatory) the location of what were are linking to relative to location of the HTML file, unless a full (absolute) URL (a.k.a http://) is given.
+        </p>
+    </div>
 </body>
 </html>
