Tables, forms buttons

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div>
         <h1>IMAGES</h1>
-        <img src="Lyme_Hall.JPG" alt="Lyme Hall"><br>
+        <img src="Lyme_Hall.JPG" alt="Lyme Hall" width="40" height="30"><br>
         <p>&lt;img src="cat.png" alt="Surprised Cat" /&gt;<br>
 
             Note src - (mandatory) the location of the image relative to location of the HTML file, unless a full (absolute) URL (a.k.a http://) is given.<br>
@@ -70,6 +70,14 @@
         <p>&lt;a href=”index.html”&gt;Home&lt;/a&gt;<br>
             Note href - (mandatory) the location of what were are linking to relative to location of the HTML file, unless a full (absolute) URL (a.k.a http://) is given.
         </p>
+    </div>
+    <div>
+        <h1>Tables</h1><br>
+        <a href="https://html.com/tables/">Tables</a>
+        <h1>Forms</h1>
+        <a href="https://developer.mozilla.org/en-US/docs/Learn/Forms/Your_first_form">Forms</a>
+        <h1>Buttons</h1>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/button">Buttons</a>
     </div>
 </body>
 </html>
